# mod_authz_jwt

./: .gitignore  Makefile  Makefile.am  README.md  authz_jwt.load.in  autogen.sh  configure.ac  mod_authz_jwt.c  modules.mk  test.c
.deps/: mod_authz_jwt_la-mod_authz_jwt.Plo
misc/: README.md
